Add HW4 without complete footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,18 @@
         </nav>
         <ul class="nav-contacts list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="nav-contacts-link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="nav-contacts-link"
+              ><svg class="header-icon" width="16px" height="12px">
+                <use href="./images/icons.svg#mail"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="nav-contacts-link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="nav-contacts-link"
+              ><svg class="header-icon" width="10px" height="12px">
+                <use href="./images/icons.svg#smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -213,6 +221,33 @@
             </li>
           </ul>
         </address>
+        <h3 class="title">Присоединяйтесь</h3>
+        <ul class="join-links">
+          <li class="list">
+            <a href="#" class="join-icon"
+              ><svg class="use" width="20" height="20">
+                <use href="./images/icons.svg#instagram"></use></svg
+            ></a>
+          </li>
+          <li class="list">
+            <a href="#" class="join-icon"
+              ><svg class="use" width="20" height="20">
+                <use href="./images/icons.svg#twitter"></use></svg
+            ></a>
+          </li>
+          <li class="list">
+            <a href="#" class="join-icon"
+              ><svg class="use" width="20" height="20">
+                <use href="./images/icons.svg#facebook"></use></svg
+            ></a>
+          </li>
+          <li class="list">
+            <a href="#" class="join-icon">
+              <svg class="use" width="20" height="20">
+                <use href="./images/icons.svg#linkedin"></use></svg
+            ></a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
