--- a/index.html
+++ b/index.html
@@ -30,16 +30,24 @@
         </nav>
         <ul class="nav-contacts list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="nav-contacts-link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="nav-contacts-link"
+              ><svg class="header-icon" width="16px" height="12px">
+                <use href="./images/icons.svg#mail"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="nav-contacts-link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="nav-contacts-link"
+              ><svg class="header-icon" width="10px" height="12px">
+                <use href="./images/icons.svg#smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero overlay">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="button primary">Заказать услугу</button>
@@ -49,28 +57,50 @@
         <div class="container">
           <ul class="section-details-info list">
             <li class="item">
-              <h3 class="title">Внимание к деталям</h3>
-              <p class="section-details-text">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
-              </p>
+              <svg class="features-icon" width="270px" height="120px">
+                <use href="./images/icons.svg#antenna" width="70px" height="70px"></use>
+              </svg>
+              <div class="features-text">
+                <h3 class="title">Внимание к деталям</h3>
+                <p class="section-details-text">
+                  Идейные соображения, а также начало повседневной работы по формированию позиции.
+                </p>
+              </div>
             </li>
             <li class="item">
-              <h3 class="title">Пунктуальность</h3>
-              <p class="section-details-text">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-              </p>
+              <svg class="features-icon" width="270px" height="120px">
+                <use href="./images/icons.svg#clock" width="70px" height="70px"></use>
+              </svg>
+              <div class="features-text">
+                <h3 class="title">Пунктуальность</h3>
+                <p class="section-details-text">
+                  Задача организации, в особенности же рамки и место обучения кадров влечет за
+                  собой.
+                </p>
+              </div>
             </li>
             <li class="item">
-              <h3 class="title">Планирование</h3>
-              <p class="section-details-text">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
-              </p>
+              <svg class="features-icon" width="270px" height="120px">
+                <use href="./images/icons.svg#diagram" width="70px" height="70px"></use>
+              </svg>
+              <div class="features-text">
+                <h3 class="title">Планирование</h3>
+                <p class="section-details-text">
+                  Равным образом консультация с широким активом в значительной степени
+                  обуславливает.
+                </p>
+              </div>
             </li>
             <li class="item">
-              <h3 class="title">Современные технологии</h3>
-              <p class="section-details-text">
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-              </p>
+              <svg class="features-icon" width="270px" height="120px">
+                <use href="./images/icons.svg#astronaut" width="70px" height="70px"></use>
+              </svg>
+              <div class="features-text">
+                <h3 class="title">Современные технологии</h3>
+                <p class="section-details-text">
+                  Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
@@ -125,6 +155,34 @@
                 <h3 class="work">Игорь Демьяненко</h3>
                 <p class="work-profession">Product Designer</p>
               </div>
+              <div>
+                <ul class="team-links">
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon">
+                      <svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -137,6 +195,34 @@
               <div class="team-all">
                 <h3 class="work">Ольга Репина</h3>
                 <p class="work-profession">Frontend Developer</p>
+              </div>
+              <div>
+                <ul class="team-links">
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon">
+                      <svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -151,6 +237,34 @@
                 <h3 class="work">Николай Тарасов</h3>
                 <p class="work-profession">Marketing</p>
               </div>
+              <div>
+                <ul class="team-links">
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon">
+                      <svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -164,13 +278,86 @@
                 <h3 class="work">Михаил Ермаков</h3>
                 <p class="work-profession">UI Designer</p>
               </div>
+              <div>
+                <ul class="team-links">
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon"
+                      ><svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="list">
+                    <a href="#" class="team-icon">
+                      <svg class="use" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section-clients padding">
+        <div class="container">
+          <h2 class="section-clients-title">Постоянные клиенты</h2>
+          <ul class="clients-links list">
+            <li class="list">
+              <a href="#" class="clients-icon">
+                <svg width="41" height="47">
+                  <use href="./images/icons.svg#yaco"></use></svg
+              ></a>
+            </li>
+            <li class="list">
+              <a href="#" class="clients-icon">
+                <svg width="40" height="52">
+                  <use href="./images/icons.svg#cotagline"></use></svg
+              ></a>
+            </li>
+            <li class="list">
+              <a href="#" class="clients-icon">
+                <svg width="43" height="41">
+                  <use href="./images/icons.svg#coellipse"></use></svg
+              ></a>
+            </li>
+            <li class="list">
+              <a href="#" class="clients-icon">
+                <svg width="84" height="41">
+                  <use href="./images/icons.svg#cofoster"></use></svg
+              ></a>
+            </li>
+            <li class="list">
+              <a href="#" class="clients-icon">
+                <svg width="63" height="45">
+                  <use href="./images/icons.svg#cobrand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list">
+              <a href="#" class="clients-icon">
+                <svg width="94" height="44">
+                  <use href="./images/icons.svg#cocub"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container">
         <a href="./index.html" class="logo-bottom"><span class="logo-blue">Web</span>Studio</a>
         <address class="address">
           <ul class="list">
@@ -191,6 +378,33 @@
             </li>
           </ul>
         </address>
+        <h3 class="title">Присоединяйтесь</h3>
+        <ul class="join-links">
+          <li class="list">
+            <a href="#" class="join-icon"
+              ><svg class="use" width="20" height="20">
+                <use href="./images/icons.svg#instagram"></use></svg
+            ></a>
+          </li>
+          <li class="list">
+            <a href="#" class="join-icon"
+              ><svg class="use" width="20" height="20">
+                <use href="./images/icons.svg#twitter"></use></svg
+            ></a>
+          </li>
+          <li class="list">
+            <a href="#" class="join-icon"
+              ><svg class="use" width="20" height="20">
+                <use href="./images/icons.svg#facebook"></use></svg
+            ></a>
+          </li>
+          <li class="list">
+            <a href="#" class="join-icon">
+              <svg class="use" width="20" height="20">
+                <use href="./images/icons.svg#linkedin"></use></svg
+            ></a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
