--- a/portfolio.html
+++ b/portfolio.html
@@ -200,54 +200,58 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo-bottom"><span class="logo-blue">Web</span>Studio</a>
-        <address class="address">
-          <ul class="list">
-            <li class="item">
-              <a
-                href="https://goo.gl/maps/PjhiyyhhmWiJJiV29"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="list-address"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <div class="footer-container">
+        <div class="address-container">
+          <a href="./index.html" class="logo-bottom"><span class="logo-blue">Web</span>Studio</a>
+          <address class="address">
+            <ul class="list">
+              <li class="item">
+                <a
+                  href="https://goo.gl/maps/PjhiyyhhmWiJJiV29"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="list-address"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a href="mailto:info@example.com" class="list-contacts">info@example.com</a>
+              </li>
+              <li class="item">
+                <a href="tel:+380991111111" class="list-contacts">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="join-container">
+          <h3 class="title">Присоединяйтесь</h3>
+          <ul class="join-links">
+            <li class="list">
+              <a href="#" class="join-icon"
+                ><svg class="use" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use></svg
+              ></a>
             </li>
-            <li class="item">
-              <a href="mailto:info@example.com" class="list-contacts">info@example.com</a>
+            <li class="list">
+              <a href="#" class="join-icon"
+                ><svg class="use" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use></svg
+              ></a>
             </li>
-            <li class="item">
-              <a href="tel:+380991111111" class="list-contacts">+38 099 111 11 11</a>
+            <li class="list">
+              <a href="#" class="join-icon"
+                ><svg class="use" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li class="list">
+              <a href="#" class="join-icon">
+                <svg class="use" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
-        <h3 class="title">Присоединяйтесь</h3>
-        <ul class="join-links">
-          <li class="list">
-            <a href="#" class="join-icon"
-              ><svg class="use" width="20" height="20">
-                <use href="./images/icons.svg#instagram"></use></svg
-            ></a>
-          </li>
-          <li class="list">
-            <a href="#" class="join-icon"
-              ><svg class="use" width="20" height="20">
-                <use href="./images/icons.svg#twitter"></use></svg
-            ></a>
-          </li>
-          <li class="list">
-            <a href="#" class="join-icon"
-              ><svg class="use" width="20" height="20">
-                <use href="./images/icons.svg#facebook"></use></svg
-            ></a>
-          </li>
-          <li class="list">
-            <a href="#" class="join-icon">
-              <svg class="use" width="20" height="20">
-                <use href="./images/icons.svg#linkedin"></use></svg
-            ></a>
-          </li>
-        </ul>
+        </div>
       </div>
     </footer>
   </body>
