--- a/index.html
+++ b/index.html
@@ -57,50 +57,48 @@
         <div class="container">
           <ul class="section-details-info list">
             <li class="item">
-              <svg class="features-icon" width="270px" height="120px">
-                <use href="./images/icons.svg#antenna" width="70px" height="70px"></use>
-              </svg>
               <div class="features-text">
-                <h3 class="title">Внимание к деталям</h3>
-                <p class="section-details-text">
-                  Идейные соображения, а также начало повседневной работы по формированию позиции.
-                </p>
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
               </div>
+              <h3 class="title-text">Внимание к деталям</h3>
+              <p class="section-details-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
             </li>
             <li class="item">
-              <svg class="features-icon" width="270px" height="120px">
-                <use href="./images/icons.svg#clock" width="70px" height="70px"></use>
-              </svg>
               <div class="features-text">
-                <h3 class="title">Пунктуальность</h3>
-                <p class="section-details-text">
-                  Задача организации, в особенности же рамки и место обучения кадров влечет за
-                  собой.
-                </p>
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
               </div>
+              <h3 class="title-text">Пунктуальность</h3>
+              <p class="section-details-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
             </li>
             <li class="item">
-              <svg class="features-icon" width="270px" height="120px">
-                <use href="./images/icons.svg#diagram" width="70px" height="70px"></use>
-              </svg>
               <div class="features-text">
-                <h3 class="title">Планирование</h3>
-                <p class="section-details-text">
-                  Равным образом консультация с широким активом в значительной степени
-                  обуславливает.
-                </p>
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
               </div>
+              <h3 class="title-text">Планирование</h3>
+              <p class="section-details-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
             </li>
             <li class="item">
-              <svg class="features-icon" width="270px" height="120px">
-                <use href="./images/icons.svg#astronaut" width="70px" height="70px"></use>
-              </svg>
               <div class="features-text">
-                <h3 class="title">Современные технологии</h3>
-                <p class="section-details-text">
-                  Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                </p>
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
               </div>
+              <h3 class="title-text">Современные технологии</h3>
+              <p class="section-details-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
             </li>
           </ul>
         </div>
@@ -154,8 +152,6 @@
               <div class="team-all">
                 <h3 class="work">Игорь Демьяненко</h3>
                 <p class="work-profession">Product Designer</p>
-              </div>
-              <div>
                 <ul class="team-links">
                   <li class="list">
                     <a href="#" class="team-icon"
@@ -195,8 +191,6 @@
               <div class="team-all">
                 <h3 class="work">Ольга Репина</h3>
                 <p class="work-profession">Frontend Developer</p>
-              </div>
-              <div>
                 <ul class="team-links">
                   <li class="list">
                     <a href="#" class="team-icon"
@@ -236,8 +230,6 @@
               <div class="team-all">
                 <h3 class="work">Николай Тарасов</h3>
                 <p class="work-profession">Marketing</p>
-              </div>
-              <div>
                 <ul class="team-links">
                   <li class="list">
                     <a href="#" class="team-icon"
@@ -277,8 +269,6 @@
               <div class="team-all">
                 <h3 class="work">Михаил Ермаков</h3>
                 <p class="work-profession">UI Designer</p>
-              </div>
-              <div>
                 <ul class="team-links">
                   <li class="list">
                     <a href="#" class="team-icon"
@@ -316,38 +306,38 @@
           <ul class="clients-links list">
             <li class="list">
               <a href="#" class="clients-icon">
-                <svg width="41" height="47">
+                <svg width="106" height="60">
                   <use href="./images/icons.svg#yaco"></use></svg
               ></a>
             </li>
             <li class="list">
               <a href="#" class="clients-icon">
-                <svg width="40" height="52">
+                <svg width="106" height="60">
                   <use href="./images/icons.svg#cotagline"></use></svg
               ></a>
             </li>
             <li class="list">
               <a href="#" class="clients-icon">
-                <svg width="43" height="41">
+                <svg width="106" height="60">
                   <use href="./images/icons.svg#coellipse"></use></svg
               ></a>
             </li>
             <li class="list">
               <a href="#" class="clients-icon">
-                <svg width="84" height="41">
+                <svg width="106" height="60">
                   <use href="./images/icons.svg#cofoster"></use></svg
               ></a>
             </li>
             <li class="list">
               <a href="#" class="clients-icon">
-                <svg width="63" height="45">
+                <svg width="106" height="60">
                   <use href="./images/icons.svg#cobrand"></use>
                 </svg>
               </a>
             </li>
             <li class="list">
               <a href="#" class="clients-icon">
-                <svg width="94" height="44">
+                <svg width="106" height="60">
                   <use href="./images/icons.svg#cocub"></use>
                 </svg>
               </a>
@@ -358,7 +348,7 @@
     </main>
     <footer class="footer">
       <div class="footer-container">
-        <div class="address-container">
+        <div>
           <a href="./index.html" class="logo-bottom"><span class="logo-blue">Web</span>Studio</a>
           <address class="address">
             <ul class="list">
