--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,6 @@
             <li class="item"><button type="button" class="filter secondary">Дизайн</button></li>
             <li class="item"><button type="button" class="filter secondary">Маркетинг</button></li>
           </ul>
-
           <ul class="filter-products list">
             <li class="item">
               <a href="#" class="products-link"
@@ -201,7 +200,7 @@
     </main>
     <footer class="footer">
       <div class="footer-container">
-        <div class="address-container">
+        <div>
           <a href="./index.html" class="logo-bottom"><span class="logo-blue">Web</span>Studio</a>
           <address class="address">
             <ul class="list">
